--- a/www/index.html
+++ b/www/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>dev@cube</title>
+  <title>preview@cube</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- 添加预览组件css -->
+  <link rel="stylesheet" href="https://s0.ssl.qhres2.com/static/8d72b25369122bfd.css">
+  <!-- 添加 sdk lib css -->
   <link rel="stylesheet" href="https://s0.ssl.qhres2.com/static/c83414da3e777247.css#cubesdk.2.0.0">
   <base target="_blank">
   <style>
@@ -23,10 +26,11 @@
 </head>
 <body>
   <div id="tips"> cube 开发者工具，暂不支持 IE 浏览器 <br> 推荐使用 Chrome 浏览器</div>
-  <div id="doc">
-  </div>
-  <script src="https://s0.ssl.qhres2.com/static/20f52408d4ef209b.js#cubesdk.2.0.0"></script>
-  <script type="module" src="/main.js"></script>
+  <div id="cube-doc"></div>
+  <!-- 添加 sdk lib js -->
+  <script src="https://s0.ssl.qhres2.com/static/55425cdbf8bd7ef2.js#cubesdk.2.0.0"></script>
+  <!-- 添加预览组件js -->
+  <script type="module" src="https://s0.ssl.qhres2.com/static/b3a64a58cbb0a10e.js"></script>
   <script>
     function loadJs(res){
       return new Promise((resolve, reject) => {
@@ -58,7 +62,7 @@
       return body.data
     }
 
-    async function renderCube (){
+    async function renderCube (selector){
       let data = await getCubeInfo()
       const { init, Cool } = CubeSdk;
       const sysData = {
@@ -77,7 +81,7 @@
       if (res) {
         await loadJs(res)
       }
-      cool.insert('#cube-temp', 'top');
+      cool.insert(selector, 'top');
       cool.trigger('show');
       cool.trigger('completeshow');
       return cool
